[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khsgd"
description = ""
version = "0.0.0"
authors = [
    {name="Annabelle Michael Carrell", email="ac2411@cam.ac.uk"},
    {name="Albert Gong", email="agong@cs.cornell.edu"},
    {name="Abhishek Shetty", email="ashetty1995@gmail.com"},
    {name="Raaz Dwivedi", email="dwivedi@cornell.edu"},
    {name="Lester Mackey", email="lmackey@microsoft.com"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/microsoft/khsgd"
Issues = "https://github.com/microsoft/khsgd/issues"
Repository = "https://github.com/microsoft/khsgd.git"

[tool.ruff]

exclude = [
    ".git",
    "__pycache__",
]

lint.ignore = [
    "ANN101",
    "ANN401",
    "N801",
    "E203",
    "E266",
    "E501",
    "E741",
    "N803",
    "N802",
    "N806",
    "N812",
    "D400",
    "D401",
    "D104", #temporary
    "D105",
    "D415",
    "D402",
    "D205",
    "D100",
    "D101",
    "D107",
    "D203",
    "D213",
    "F811",
    "ANN204",
    "ANN102",
]
lint.select = ["D", "E", "F", "N", "ANN"]
lint.fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.unfixable = []

[tool.pyright]
venv = ".venv"
venvPath = "."
include = ["src"]
pythonVersion = "3.10.4"

[tool.setuptools]
py-modules = []